fix jhep things

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-15 12:58:50 -0400 
+%% Created for Pete Su at 2019-03-18 07:49:04 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Tommasini:2002np,
+	Archiveprefix = {arXiv},
+	Author = {Tommasini, Daniele},
+	Date-Added = {2019-03-18 07:48:12 -0400},
+	Date-Modified = {2019-03-18 07:48:34 -0400},
+	Doi = {10.1088/1126-6708/2002/07/039},
+	Eprint = {hep-th/0205105},
+	Journal = {JHEP},
+	Note = {\href{https://arxiv.org/abs/hep-th/0205105}{arXiv:0205105}},
+	Pages = {039},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = HEP-TH/0205105;%%},
+	Title = {{Reality, measurement and locality in quantum field theory}},
+	Volume = {07},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1088/1126-6708/2002/07/039}}
 
 @article{VanRaamsdonk:2009ar,
 	Archiveprefix = {arXiv},
@@ -65,7 +82,7 @@
 
 @article{Braunstein:2009c,
 	Archiveprefix = {arXiv},
-	Author = {Braunstein, Samuel L.  and Zyczkowski, Karol},
+	Author = {Braunstein, Samuel L. and Zyczkowski, Karol},
 	Date-Added = {2019-03-15 12:20:47 -0400},
 	Date-Modified = {2019-03-15 12:57:01 -0400},
 	Eprint = {0907.1190v2},
