--- a/Fields3Archive/Fields3.tex
+++ b/Fields3Archive/Fields3.tex
@@ -343,7 +343,7 @@
 % for ordinary tex
 %
 \ifx\pdfoutput\undefined
-\def\rgboo#1{\special{color rgb #1}}
+\def\rgboo#1{}
 \input epsf
 \def\fig#1{\epsfbox{#1.eps}}
 \def\figscale#1#2{\epsfxsize=#2\epsfbox{#1.eps}}
@@ -381,7 +381,7 @@
 % for pdftex
 %
 \else
-\def\rgboo#1{\pdfliteral{#1 rg #1 RG}}
+\def\rgboo#1{}
 \def\fig#1{\pdfximage {#1.pdf}\pdfrefximage\pdflastximage}
 \def\figscale#1#2{\pdfximage width#2 {#1.pdf}\pdfrefximage\pdflastximage}
 \pdfcatalog{/PageMode /UseOutlines}		% bookmark window open
@@ -440,8 +440,8 @@
 
 %\def\bulletfill{\cleaders\hbox{$\mathsurround=0pt \mkern4mu
 %	\raise.15em\hbox{$\bullet$} \mkern4mu$}\hfill}
-\def\chrulefill{\rgb{1 0 0}{\hrulefill}}
-\def\cdotfill{\rgb{1 0 0}{\dotfill}}
+\def\chrulefill{{\hrulefill}}
+\def\cdotfill{{\dotfill}}
 \newcount\area	\area=1
 \newcount\cross	\cross=1
 \def\volume#1\par{\newpage\noindent{\biggest{\rgb{1 .5 0}{#1}}}
