--- a/0506082v2/0506082-lucida.tex
+++ b/0506082v2/0506082-lucida.tex
@@ -18,11 +18,10 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{charter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[type1]{cabin}% sans serif
-\usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
-\usepackage[cal=boondoxo]{mathalfa}
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.2in]{geometry}
 
