--- a/0506082v2/0506082-lucida.tex
+++ b/0506082v2/0506082-lucida.tex
@@ -591,7 +591,7 @@ $p_n$ and unit eigenvectors $\Phi_n$. The pure states of the total system $S+A$ 
 The problem, highlighted by Schr\"{o}dinger's cat,  now arises if one selects the initial state of $S$ to be $\sum_n c_n \Psi_n$ (with $\sum |c_n|^2=1$), for then the superposition principle leads to the conclusion that the final state of the coupled system is $\sum_n c_n \Psi_n \ot\Phi_n$. 
  Now, basically all von Neumann said was that if one restricts the final state to the  system $S$, then the resulting density matrix is the mixture $\sum_n |c_n|^2 
  [\Psi_n]$ (where $[\Psi]$ is the orthogonal projection onto a unit vector $\Psi$),\footnote{I.e., $[\Psi]f=(\Psi,f)\Psi$; in Dirac notation one would have $[\Psi]=|\Psi\rangle\langle\Psi|$.} so that, {\it from the perspective of the system alone}, the measurement appears to have caused a transition from the pure state
- $\sum_{n,m} c_n\ovl{c_m} \Psi_n\Psi_m^*$
+ $\sum_{n,m} c_n\ovl{c_m}\, \Psi_n\Psi_m^*$
  to the mixed state 
  $\sum_n |c_n|^2 [\Psi_n]$, in which interference terms $\Psi_n\Psi_m^*$ for $n\neq m$
 are absent. Here the operator $\Psi_n\Psi_m^*$ is defined by $\Psi_n\Psi_m^*f=(\Psi_m,f)\Psi_n$; in particular, $\Psi\Psi^*=[\Psi]$.\footnote{In
