--- a/0506082v2/0506082-charter.tex
+++ b/0506082v2/0506082-charter.tex
@@ -18,9 +18,14 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+%\usepackage{amssymb}
+\usepackage{charter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[type1]{cabin}% sans serif
+\usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
+\usepackage[cal=boondoxo]{mathalfa}
+\linespread{1.05}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 
 \tolerance=1000
