--- a/9407157/9407157.tex
+++ b/9407157/9407157.tex
@@ -8,7 +8,25 @@
 %Date (revised): Mon, 01 Aug 1994 19:45:44 EDT
 
 % hep-th/9407157
-\documentstyle[12pt]{article}
+\documentclass[12pt]{article}
+\usepackage{mathpazo}
+\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\sloppy
 \author{A. Jadczyk \\
  Research Institute for Mathematical
 Physics\\ Kyoto University, Kyoto 606, Japan \\and\\
@@ -35,7 +53,7 @@ medium of two--state detectors. Piecewise deterministic random process
 consists of pairs $(classical\, event, quantum\, jump)$, interspersed with
 random periods of continuous (in general, non--linear)
 Schr\"odinger's--type evolution. The classical events are flips of the
-detectors -- they account for tracks. Quantum jumps are shown, in the
+detectors--they account for tracks. Quantum jumps are shown, in the
 simplest, homogeneous case, to be identical to those in the early
 spontaneous localization model of Ghirardi, Rimini and Weber (GRW). The
 methods and results of the present paper allow for an elementary derivation
@@ -49,13 +67,13 @@ present author proposed a model of quantum measurement based on completely
 positive (CP) semigroup coupling between a quantum system and a classical
 one \cite{bla1}. The main advantages of this proposal emerged only after
 the publication of \cite{bla1}. In the following series of papers
-\cite{bla2} -- \cite{bla5} the method of Ref. \cite{bla1} was successfully
+\cite{bla2}--\cite{bla5} the method of Ref. \cite{bla1} was successfully
 applied to several model physical situations, including Zeno's effect,
-Stern-Gerlach -- type coupling, particle position detector, and SQUID--tank
-system. In all those cases the coupling was shown to lead to a piecewise --
-deterministic random process (PDP) describing time series of experimentally
+Stern-Gerlach type coupling, particle position detector, and SQUID-tank
+system. In all those cases the coupling was shown to lead to a piecewise-deterministic 
+random process (PDP) describing time series of experimentally
 observed {\sl events}\,. Moreover, in Ref. \cite{jad1} models that deal
-with simultaneous measurement of several non--commuting observables were
+with simultaneous measurement of several non-commuting observables were
 described, and it was suggested that the question of determining an unknown
 state of the quantum system should be answered using the proposed exact
 definition of a measurement. However, the obvious and crucial test of any
@@ -63,18 +81,18 @@ quantum measurement theory, namely that of finding the laws governing track
 formation in cloud chambers and on photographic plates was, until recently,
 missing. The reason for this was partly of a technical character, namely in
 all of these previous applications the classical system was either discrete
-or finite -- dimensional, otherwise technical difficulties mounted. In the
+or finite-dimensional, otherwise technical difficulties mounted. In the
 present paper we will show how these difficulties can be overcomed owing to
 the discrete Poisson nature of the PDP.
 
-Technically, the paper is concerned with a non -- relativistic quantum
+Technically, the paper is concerned with a non--relativistic quantum
 particle coupled to a classical medium of two--state particle detectors.
 The medium is characterized by a family of "sensitivity" functions
 $g_a(x)$, where $g_a$ can be thought of as a Gaussian--like function
-centered at $a$. \footnote{If there is no detector at $a$, we put
+centered at $a$.\footnote{If there is no detector at $a$, we put
 $g_a(x)\equiv0$. Thus our model covers also the case of a discrete, finite
 or infinite, number of detectors.} The configuration space of the classical
-system is, in general, infinite--dimensional. In $\$ 3$ we will write down
+system is, in general, infinite-dimensional. In $\$ 3$ we will write down
 the simplest possible Liouville equation (Eqs.
 (\ref{eq:liou})--(\ref{eq:va})) corresponding to the intuitive idea that
 presence of the particle at some point $a$ causes flip in the detector
@@ -84,8 +102,8 @@ Hamiltonian is allowed to depend on the actual configuration of the medium
 (although in most applications such a dependence can be neglected). We
 denote by $H_\Gamma$ the Hamiltonian corresponding to detectors flipped at
 the points of a set $\Gamma$. The main result of the present paper is the
-derivation of a PDP corresponding to this coupling. The PDP, derived in $\$
-4$, can be summarized as follows.
+derivation of a PDP corresponding to this coupling. The PDP, derived in section
+\ref{pdp}, can be summarized as follows.
 
 \medskip
 {\sl Suppose one starts, at time $t_0$, with all detectors in the "off"
@@ -120,9 +138,9 @@ homogeneous medium. If the medium is passive, i.e. if the quantum
 Hamiltonian does not depend on the actual state of the medium, and if it is
 homogeneous, then the description simplifies: the quantum process
 separates, the jump rate is constant, and one gets "spontaneous
-wave--packet reductions" of Ghirardi--Rimini--Weber (cf. e.g. \cite{ghi1}
+wave--packet reductions" of Ghirardi-Rimini-Weber (cf. e.g. \cite{ghi1}
 and references therein). In general, however, the process of formation of a
-track has a non--constant rate, and the dependence of the rate of jumps on
+track has a non-constant rate, and the dependence of the rate of jumps on
 the state of the quantum system given by the present model is essential and
 experimentally verifiable \footnote{This is one of the important
 differences between our approach and other ones, where dependence of the
@@ -160,10 +178,10 @@ Wilson chamber etc. I think this is a mistake, it does not.\rq
 \end{quotation}
 H.P. Stapp stressed the role of "events" in the "world process" (Refs.
 \cite{stap2,stap3}, cf. also the entry "events" in the Index of
-\cite{stap4}). G. F. Chew used Stapp's ideas on soft--photon
-creation--annihilation processes (cf. \cite{stap5}) and proposed the term
+\cite{stap4}). G. F. Chew used Stapp's ideas on soft-photon
+creation-annihilation processes (cf. \cite{stap5}) and proposed the term
 "explicate order", complementing Bohm's "implicate" quantum order, to
-denote the world process of "gentle" creation--annihilation events
+denote the world process of "gentle" creation-annihilation events
 \cite{chew1}. R. Haag emphasized \cite{haag1} that "an event in quantum
 physics is discrete and irreversible" and that "we must assume that the
 arrow of time is encoded in the fundamental laws ...". In \cite{haag2} he
@@ -177,7 +195,7 @@ quantum vocabulary, together with other vague terms such as "macroscopic",
 term "measurement" by that of "experiment", and also not to speak of
 "observables" (the things that seem to call for an "observer") but to
 introduce instead the concept of "beables" - the things that objectively
-"happen--to--be (or not--to--be)". \footnote{Calling observables
+"happen-to-be (or not-to-be)". \footnote{Calling observables
 "observables" can be, however, justified in the framework of an objective
 theory of experiments. We plan to discuss this subject elsewhere .}
 
@@ -194,50 +212,50 @@ coupling between a quantum and a classical system (cf. \cite{su1} and
 references therein).
 
 N.P. Landsman \cite{lan1} and M. Ozawa \cite{oza1} gave quite general
-("no--go") arguments that stressed impossibility of coupling of classical
-and quantum degrees of freedom via a unitary, finite--time dynamics.
-\footnote{A short no--go argument can be found in Ref. \cite{jad1}.}
+("no-go") arguments that stressed impossibility of coupling of classical
+and quantum degrees of freedom via a unitary, finite-time dynamics.
+\footnote{A short no-go argument can be found in Ref. \cite{jad1}.}
 
-On the other hand many authors were using "dynamical semigroups" -- {\sl
-non--unitary} dissipative time--evolutions that described an effective
+On the other hand many authors were using "dynamical semigroups"-{\sl
+non-unitary} dissipative time-evolutions that described an effective
 dynamics of quantum systems coupled to other quantum systems or to external
 "reservoirs" or "environment". V. Gorini et al. \cite{gor1} and Lindblad
 \cite{lin1} derived a general form of generators of norm--continuous
 semigroups of completely positive maps of the operator algebra of a Hilbert
 space. \footnote{It was later extended by E. Christensen and D. Evans
 \cite{chri1} to cover the case of more general operator algebras, including
-the case that is most interesting for us - that of a non--trivial centre.}
+the case that is most interesting for us--that of a non-trivial centre.}
 Such semigroups were widely applied to many kinds of "master equations" of
 statistical physics, while Ghirardi, Rimini and Weber \cite{ghi1} proposed
-to use a particular Lindblad--type generator for describing a "spontaneous
+to use a particular Lindblad-type generator for describing a "spontaneous
 reduction process" for a single quantum particle. The GRW model
 incorporated "quantum jumps" that occurred in finite (Poisson distributed)
 times, but it did not account for the (classical) "events". Although it was
 clear to the experts that using dissipative semigroups instead of a unitary
 dynamics allowed to go around the no--go theorems, it is only in
 \cite{bla1} that simple methods of construction of dissipative generators
-were found that led to measurement--like couplings of quantum and classical
-degrees of freedom. Later on, in Refs. \cite{bla2}--\cite{jad1}, using the
+were found that led to measurement-like couplings of quantum and classical
+degrees of freedom. Later on, in Refs. \cite{bla2}-\cite{jad1}, using the
 results of M. H. A. Davis (see \cite{davmha1,davmha2}), a
 piecewise--deterministic random process (PDP) on the space of pure states
 of the total (classical+quantum) system was associated with the Liouville
 equation. While the Liouville equation describes continuous time--evolution
 of density matrices, that is of statistical states that concern {\sl
-ensembles}, the associated piecewise--deterministic random process contains
+ensembles}, the associated piecewise-deterministic random process contains
 apparently more useful information: it can be used to simulate real--time
 behaviour of {\sl individual}\, systems in measurement--like situations.
 
 \section{The Cloud Chamber Model}
 Our aim is to explain the "nice linear tracks" that quantum particles leave
 on photographs and in cloud chambers. These tracks are indeed hard to
-explain if one assumes that there are no particles and no events -- only
+explain if one assumes that there are no particles and no events--only
 Schr\"odinger's waves. Schr\"odinger himself was perplexed and not quite
 sure which way to take.
 
 Physically, a photographic plate or a cloud chamber is a highly complex
 many-particle system. Physiologically, it appears to exhibits a complex,
 irreversible dynamics to an external living observer. Many factors
-participate in the result -- including the mediation of photons in the
+participate in the result--including the mediation of photons in the
 final act of perception. However, it seems to us that the detailed internal
 structure of local particle detectors, and also the details of the
 perception process, would it be human or animal, are totally irrelevant for
@@ -280,7 +298,7 @@ the detectors. In fact, aiming at a wider applicability of our model, we
 will allow for non--constant rates of jumps, and for more general, not
 necessarily Gaussian, sensitivity functions. Clearly, presence of arbitrary
 functions that are external to the model, makes it to look like a
-phenomenological rather than as a fundamental description -- unless these
+phenomenological rather than as a fundamental description--unless these
 functions are derived from geometrical and probabilistic considerations.
 
 We proceed to describe our model in mathematical terms. The description
@@ -291,18 +309,18 @@ ideas and results.\\ Let $E$ denote the physical space, we take for
 definiteness $E={\bf R}^n$, although it is straightforward to $E$ to be a
 homogeneous space or an arbitrary Riemannian manifold. We consider the
 space $E$ filled up with a continuous medium which can be, at each point
-$a\in E$, in one of its two states: "on--state", represented by
-${1\choose0}$, or "off--state", represented by ${0\choose1}$. We would like
+$a\in E$, in one of its two states: "on-state", represented by
+${1\choose0}$, or "off-state", represented by ${0\choose1}$. We would like
 to consider the set of all possible states of the medium. This is however
 enormously big a set, because states of the medium are, in our case, in
-one--to--one correspondence with its configurations, that is with subsets
+one-to-one correspondence with its configurations, that is with subsets
 of $E$. Indeed, to each state of the medium we can uniquely associate the
 set of all points that are "on". Thus the set of all states of the medium
 is isomorphic to $2^E$. Fortunately we can restrict our attention to much
 smaller classes of subsets of $E$. Let us introduce equivalence relation
 $"\sim "$ in $2^E$, with equivalence classes consisting of subsets of $E$
 that differ one from another by at most finite number of elements. Denoting
-by ${\scriptstyle\triangle}$ the set--theoretical symmetric difference
+by ${\scriptstyle\triangle}$ the set-theoretical symmetric difference
 operation, we have: $\Gamma\sim \Gamma '$ iff
 $\Gamma{\scriptstyle\triangle} \Gamma '$ is a finite set. It will be
 sufficient for us to choose some "ground state" and to take its equivalence
@@ -351,8 +369,8 @@ observables of the total system is the algebra of continuous, bounded
 functions on ${\cal S}$ with values in ${\cal B} ({\cal H}_q )$. Thus,
 ${\cal A}_{tot}$ is the direct sum of algebras ${\cal A}_i$, where ${\cal
 A}_i$ is the algebra of continuous, bounded, ${\cal B} ({\cal
-H}_q)$--valued functions on ${\cal S}_i$. As our main aim is to derive the
-PDP rather than to prove the existence of CP semigroup -- we will apply,
+H}_q)$-valued functions on ${\cal S}_i$. As our main aim is to derive the
+PDP rather than to prove the existence of CP semigroup--we will apply,
 from now on, a heuristic notation. Thus, a state of the total system will
 be represented by a family $\{ \rho_\Gamma \}_{\Gamma\in {\cal S}}$, with
 \lq$\sum_\Gamma$\rq $\tr(\rho_\Gamma)=1$.
@@ -378,9 +396,9 @@ We proceed now to describe the coupling that corresponds to the following
 intuitive picture: {\sl the medium consists of detectors that can change
 their state if the particle approaches them sufficiently close.}\, The
 sensitivity of detectors as well as their relaxation time are described by
-real, non--negative functions $g_a(x)$, where the variable $a$ describes
+real, non-negative functions $g_a(x)$, where the variable $a$ describes
 the position of the detector. We can think of $g_a$ as a hat - like
-function with its center at $x=a$. We introduce then the non--negative
+function with its center at $x=a$. We introduce then the non-negative
 function $\Lambda (x)$ defined by \be \Lambda (x)=\int_E g_a(x)^2 da ,
 \label{eq:lam} \ee for all $x\in E$. Here $da$ denotes the Lebesgue
 measure, but if we want to describe a discrete, rather than a continuous,
@@ -408,7 +426,7 @@ To define the coupling between the particle and the medium, we will apply
 the ideas introduced in \cite{bla1,bla2}. Namely, we will write the
 Liouville time evolution equation for the statistical state of the total
 system as \be {\dot\rho}=-i[ H,\rho] + {\cal L}(\rho ) , \label{eq:liou}
-\ee where ${\cal L}$ is a Lindblad--type generator that provides
+\ee where ${\cal L}$ is a Lindblad-type generator that provides
 dissipative coupling. \vskip10pt
 {\noindent\bf Remark:} In
 the present model we will neglect a possible free dynamics of the medium.
@@ -450,9 +468,9 @@ g_a(x)=\lambda^{1/2}\left({\alpha\over\pi}\right)^{n\over 2}
 particle is determined by tracing over the classical configurations: \be
 {\hat\rho}=\sum_{\Gamma\in{\cal S}} \rho_\Gamma. \ee To sum up the Eq.
 (\ref{eq:main}) over $\Gamma$ we note that, for each $a\in E$,
-$a:\Gamma\mapsto a(\Gamma)$ is a one--to--one map of ${\cal S}$ onto
+$a:\Gamma\mapsto a(\Gamma)$ is a one-to-one map of ${\cal S}$ onto
 itself, this owing to the fact that $2^E$ is a group under the
-symmetric--difference operation, and that ${\cal S}$ is a subgroup.\\ Thus
+symmetric difference operation, and that ${\cal S}$ is a subgroup.\\ Thus
 we have $\sum_{\Gamma\in{\cal S}}\rho_{a(\Gamma)}= \sum_{\Gamma\in{\cal
 S}}\rho_\Gamma={\hat\rho}.$ It follows that the time derivative of
 ${\hat\rho}$ depends, for our particular choice of the coupling, only on
@@ -460,7 +478,8 @@ ${\hat\rho}$ and not on the full hierarchy of $\rho_\Gamma$'s; we have: \be
 {\dot {\hat\rho}} = -i[H,{\hat\rho}]+\int da\, g_a{\hat\rho} g_a -\lambda\,
 {\hat\rho },\ee which is exactly of the type discussed by Ghirardi, Rimini
 and Weber (cf. Ref. \cite{ghi1}).
-\section{The Piecewise Deterministic Process}
+
+\section{The Piecewise Deterministic Process}\label{pdp}
 \subsection{Definition of  PDP  and its infinitesimal generator}
 In his monographs \cite{davmha1,davmha2} dealing with stochastic control
 and optimization M. H. A. Davis, having in mind mainly queuing and
@@ -478,22 +497,22 @@ Consider functions $f(\xi ,\iota)$, where for each $\iota$ the variable
 $\xi $ is continuous and runs through some set $M$ \footnote{We will need
 the case where also $\iota$ will be continuous running over $E$, while $M$
 will coincide with the unit ball in the Hilbert space $L^2(E)$ (modulo the
-phase).} Suppose we have a one--parameter semi-group of transformations
+phase).} Suppose we have a one parameter semi-group of transformations
 $\alpha_t$ acting on the space of such functions with the infinitesimal
-generator ${\cal D}$ which is an integro--differential operator of the
+generator ${\cal D}$ which is an integro-differential operator of the
 following form: \be \ba{c} \left({\cal D}f\right)(\xi,\iota) =(Z_\iota
 f)(\xi,\iota)\cr\cr + \lambda(\xi,\iota)\sum_{\iota'} \int_M
 Q(\xi,\iota;d\xi',\iota') \left( f(\xi',\iota')-f(\xi,\iota)\right)
 ,\label{eq:gen} \ea \ee where $Z_\iota$ are vector fields that generate
-one--parameter flows $\phi_\iota$ on $M$, $\lambda(\xi,\iota)$ are
-non--negative functions, while $ Q(\xi,\iota;d\xi',\iota')$ are
-(non--negative) transition measures - thus satisfying \be \sum_{\iota'}
+one parameter flows $\phi_\iota$ on $M$, $\lambda(\xi,\iota)$ are
+non-negative functions, while $ Q(\xi,\iota;d\xi',\iota')$ are
+(non-negative) transition measures -- thus satisfying \be \sum_{\iota'}
 \int_M Q(\xi,\iota;d\xi',\iota') =1 , \ee and also \be
 \int_{\{\xi\}}Q(\xi,\iota;d\xi',\iota)=0 , \ee for all $\iota$ and $\xi\in
 M$. We notice that by the very definition we have $Z_\iota(\xi)=
 d\phi_\iota(\xi,t)/dt\, \vert_{t=0}$. Then, as it is shown in Refs.
 \cite{davmha1,davmha2}, one can associate with this generator ${\cal D}$ a
-piecewise--deterministic Markov process that is described as follows.
+piecewise-deterministic Markov process that is described as follows.
 
 Suppose the process starts at some point $(\xi_0 ,\iota_0 )$. Then $\xi$
 evolves continuously along the vector field $Z_\iota$,
@@ -509,7 +528,7 @@ $t$ and $t+dt$, provided it did not occurred yet is equal to
 $1-\exp\left(-\int_t^{t+dt}\lambda(s)ds\right)\approx\lambda(t)dt$. This
 justifies calling $\lambda$ the rate function.
 \vskip10pt
-Association of the random process with the semi--group $\alpha_t$ is
+Association of the random process with the semi-group $\alpha_t$ is
 canonical and can be described as follows: first one goes from $\alpha_t$
 that acts on functions $f(\xi,\iota)$ to its dual $\alpha^t$ acting on
 measures. Then, choosing the Dirac measure $\delta_{\xi_0,\iota_0}$
@@ -574,7 +593,7 @@ gives rise to two terms: \be \ba{c} -{1\over
 -(\psi,\Lambda\, \psi ) + {d\over dt}\left( f_A\left({\exp\left(
 -{\Lambda\over 2}t\right)\psi\over \Vert \exp\left( -{\Lambda\over
 2}t\right)\psi\Vert},\Gamma\right) \right)\vert_{t=0}. \ea \ee Let us
-introduce the second vector field $Z_D$ corresponding to the non--linear
+introduce the second vector field $Z_D$ corresponding to the nonlinear
 evolution: \be (Z_D f) (\psi,\Gamma)\doteq {d\over dt}f\left({\exp\left(
 -{\Lambda\over 2}t \right)\psi\over \Vert \exp\left( -{\Lambda\over
 2}t\right)\psi\Vert},\Gamma\right)\vert_{t=0}. \ee We now see that we can
@@ -592,7 +611,7 @@ $Z=Z_H+Z_D$ exponentiates to: \be \left(\exp
 $\psi_{\Gamma;t}$ is given by \be \psi_{\Gamma;t}={\exp\left(-iH_\Gamma
 t-{{\Lambda t}\over 2}\right)\psi_0 \over{\Vert \exp\left(-iH_\Gamma
 t-{{\Lambda t}\over 2}\right)\psi_0\Vert}}.\label{eq:schr}\ee
-Thus $\psi_{\Gamma;t}$ can be thought of as a solution of a non--linear,
+Thus $\psi_{\Gamma;t}$ can be thought of as a solution of a nonlinear,
 non--Hermitian Schr\"odinger equation.
 
 We now describe the piecewise deterministic process on pure states of the
@@ -626,13 +645,13 @@ given by
 and the process starts again.\\
 It is worth noting that, for simple Gaussian packets, and for a free
 evolution, the most probable place for a flip to occur is at the maximum of
-the actual wave--function. That explains linear tracks. For more
-complicated geometries and dynamics -- numerical computation is necessary,
+the actual wave function. That explains linear tracks. For more
+complicated geometries and dynamics numerical computation is necessary,
 at least until simple general laws are found that are based on PDP.
 
 \section{Summary and Conclusions}
 We have seen that a simple coupling between quantum particle and classical
-continuous medium of two--state detectors leads to a piecewise
+continuous medium of two-state detectors leads to a piecewise
 deterministic random process that accounts for track formation in cloud
 chambers and photographic plates. For a passive, homogeneous medium the
 process is essentially identical to the spontaneous localization GRW model
@@ -642,7 +661,7 @@ mentioned in the Introduction, to simulate track formations only random
 number generators and computing power is necessary. Our model does not
 involve observers and minds. This does not mean that we do not appreciate
 the importance of the mind--body problem. In our opinion understanding the
-problems of minds needs also quantum theory, and perhaps even more -- that
+problems of minds needs also quantum theory, and perhaps even more--that
 is still beyond the horizon of the present-day physics. But our model
 indicates that quantum theory does not need human minds. Quantum theory
 should be formulated in a way that involves neither observers nor minds -
