bib preview things

--- a/9407157/9407157.tex
+++ b/9407157/9407157.tex
@@ -179,7 +179,7 @@ theory actually accounts for the "nice linear traces" produced in the
 Wilson chamber etc. I think this is a mistake, it does not.\rq
 \end{quotation}
 H.P. Stapp stressed the role of "events" in the "world process" (Refs.
-\cite{stap2,stap3}, cf. also the entry "events" in the Index of
+\cite{stap2,stap3}, cf. also the entry "events" in the index of
 \cite{stap4}). G. F. Chew used Stapp's ideas on soft-photon
 creation-annihilation processes (cf. \cite{stap5}) and proposed the term
 "explicate order", complementing Bohm's "implicate" quantum order, to
