--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-18 07:49:04 -0400 
+%% Created for Pete Su at 2019-04-07 21:25:16 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Home1997,
+	Abstract = {Arguments on controversial points concerning quantum measurement theory and the quantum Zeno effect are presented. In particular it is argued that (1) the quantum Zeno effect is a genuine result of quantum theory and current quantum measurement theory, independent of the projection postulate; (2) the effect is of very general nature and rests on analogous arguments to those involved in Bell's theories; (3) the term ``quantum Zeno effect'' may usefully be restricted to experiments where a measuring device exerts a nonlocal negative-result effect on a microscopic system, mere inhibition of a transition by a directly interacting device not qualifying; (4) since no decay is truly exponential, theoretically all decay phenomena should exhibit the quantum Zeno effect under observation, continuous or discrete. A detailed study is made of the experiments claiming to demonstrate the effect; it is found that they do not meet our criterion above.},
+	Author = {D Home and M.A.B Whitaker},
+	Date-Added = {2019-04-07 21:19:57 -0400},
+	Date-Modified = {2019-04-07 21:25:15 -0400},
+	Doi = {https://doi.org/10.1006/aphy.1997.5699},
+	Issn = {0003-4916},
+	Journal = {Annals of Physics},
+	Number = {2},
+	Pages = {237 - 285},
+	Title = {A Conceptual Analysis of Quantum Zeno; Paradox, Measurement, and Experiment},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0003491697956992},
+	Volume = {258},
+	Year = {1997},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0003491697956992},
+	Bdsk-Url-2 = {https://doi.org/10.1006/aphy.1997.5699}}
 
 @article{Tommasini:2002np,
 	Archiveprefix = {arXiv},
