--- a/1711.01357/paperparts/vlbi.tex
+++ b/1711.01357/paperparts/vlbi.tex
@@ -4,7 +4,7 @@
 
 
 \begin{figure*}[h!]
-	\vspace{-.3in}
+	%\vspace{-.3in}
 	\begin{center}
 		%\hspace*{-0.5cm}
 		\begin{tabular}{  c  c   }
@@ -41,7 +41,6 @@ Depending on the imaging technique and the quality of the measurements, differen
 %f(x): \Re^{ M^2 \times 1} \rightarrow \Re^{ | y | \times 1 }
 %\end{align}
 
-\vspace{-.2in}
 \subsection{Visibilities }
 \label{sec:vis}
 
@@ -65,7 +64,6 @@ circularly Gaussian in the real-imaginary plane\footnote{In practice, the therma
 %\subsection{Earth Rotation Synthesis}
 
 
-\vspace{-.1in}
 \subsection{Bispectrum and Closure Phases }
 \label{sec:bispec}
 
@@ -107,7 +105,6 @@ Refer to the supplemental material for a derivation of this approximation.
 
  
  
-\vspace{-.1in}
 \subsection{Visibility Amplitudes }
 \label{sec:visamp}
 
