--- a/1512.01413/CHIRP.tex
+++ b/1512.01413/CHIRP.tex
@@ -1,7 +1,7 @@
-\documentclass[10pt,twocolumn,letterpaper]{article}
+\documentclass[12pt,letterpaper]{article}
 
 \usepackage{cvpr}
-\usepackage{times}
+%\usepackage{times}
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -42,13 +42,33 @@
 	\expandafter\xvekSp@lten
 	\fi}
 \makeatother
+\tolerance=1000
+
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % Include other packages here, before hyperref.
 
 % If you comment hyperref and then uncomment it, you should delete
 % egpaper.aux before re-running latex.  (Or just hit 'q' on the first latex
 % run, let it finish, and you should be clear).
-\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
+%\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10,
+pagebackref=true,breaklinks=true
+}
+
 %\usepackage[bookmarks=false]{hyperref}
 
  \cvprfinalcopy % *** Uncomment this line for the final submission
@@ -104,12 +124,13 @@
 	\and
 	Vincent L. Fish$^{3}$
 	\and
-	Sheperd S. Doeleman$^{2,3}$ \hspace{0.4in}
+	Sheperd S. Doeleman$^{2,3}$
+	\and
 	William T. Freeman$^{1,4}$
-	\\ \\
+	\\
 	\small{ \hspace{-0.3in}
-		\begin{tabular}{cccc}
-			\textsuperscript{1}Massachusetts Institute of Technology, CSAIL  & \textsuperscript{2}Harvard-Smithsonian Center for Astrophysics &
+		\begin{tabular}{cc}
+			\textsuperscript{1}Massachusetts Institute of Technology, CSAIL  & \textsuperscript{2}Harvard-Smithsonian Center for Astrophysics \\
 			\textsuperscript{3}MIT Haystack Observatory &
 			\textsuperscript{4}Google \\
 		\end{tabular}
